all section motion.dev has been added and changes are pushed

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1080,8 +1080,8 @@
 }  ,
   "mission": {
     "hero": {
-      "title": "Our Guiding Mission",
-      "subtitle": "Discover the principles that drive our organization forward"
+      "title": " We are in the Mission of Building  Trust and Relationships",
+      "subtitle": "At UNIGOLD, we believe in creating comfort that assures our customers they're in the right place and will be treated in a fair and transparent manner."
     },
     "statement": {
       "title": "Our Mission Statement",
