--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -1042,7 +1042,7 @@
 ,
   "mission": {
     "hero": {
-      "title": "हमारा मार्गदर्शक मिशन",
+      "title": "हम विश्वास और रिश्तों के निर्माण के मिशन में हैं |",
       "subtitle": "उन सिद्धांतों को खोजें जो हमारे संगठन को आगे बढ़ाते हैं"
     },
     "statement": {
