--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -1042,7 +1042,7 @@
 
   "mission": {
     "hero": {
-      "title": "ଆମର ମାର୍ଗଦର୍ଶକ ଲକ୍ଷ୍ୟ",
+      "title": "ଆମେ ବିଶ୍ୱାସ ଏବଂ ସମ୍ପର୍କ ଗଠନର ମିଶନରେ ଅଛୁ |",
       "subtitle": "ସେହି ନୀତିଗୁଡିକୁ ଅନୁସନ୍ଧାନ କରନ୍ତୁ ଯାହା ଆମ ସଂସ୍ଥାକୁ ଆଗକୁ ନେଇଥାଏ"
     },
     "statement": {
