--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -35,6 +35,14 @@
       "description": "हम बाजार में सबसे प्रतिस्पर्धी ब्याज दरें प्रदान करते हैं"
     }
   },
+  "companyName": "यूनिगोल्ड फाइनेंस लिमिटेड",
+  "aboutParagraph1": "यूनिगोल्ड फाइनेंस एक पंजीकृत एनबीएफसी है, जिसकी स्थापना अल्ट्रा-हाई नेट वर्थ व्यक्तियों और फैमिली ऑफिसेज द्वारा की गई है। यह एनबीएफसी ग्राहकों को आसान गोल्ड लोन प्रदान करने और ऑफलाइन सोर्सिंग मॉडल के माध्यम से व्यक्तिगत संपर्क स्थापित करने पर केंद्रित है।",
+  "aboutParagraph2": "हम समाज के सभी वर्गों के लिए शीर्ष और सबसे विश्वसनीय वित्तीय भागीदार बनने का लक्ष्य रखते हैं। हम मानते हैं कि परेशानी-मुक्त लोन प्रक्रिया, परिचालन दक्षता और ग्राहक संतुष्टि के माध्यम से हम बहुत कम समय में अपना लक्ष्य प्राप्त कर सकते हैं।",
+  "aboutParagraph3": "हमारे व्यवसाय को समृद्ध अनुभव वाले पेशेवरों को सौंपा गया है ताकि हमें गोल्ड फाइनेंसिंग में अग्रणी बनने में मदद मिल सके। हमारा संगठन इस आधार पर बनाया गया है कि कर्मचारियों को उनकी भूमिका की परवाह किए बिना नेतृत्व के अवसर दिए जाने चाहिए।",
+  "loanAmount": "लोन राशि",
+  "happyCustomers": "संतुष्ट ग्राहक",
+  "branchNetwork": "ब्रांच नेटवर्क"
+,
   "features": {
     "title": "यूनीगोल्ड फाइनेंस को क्यों चुनें?",
     "quickProcessing": {
