--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -35,6 +35,15 @@
       "description": "ଆମେ ବଜାରରେ ସର୍ବାଧିକ ପ୍ରତିଯୋଗୀତାମୂଳକ ସୁଧ ହାର ପ୍ରଦାନ କରୁ"
     }
   },
+  
+  "companyName": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ଲିମିଟେଡ୍",
+  "aboutParagraph1": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ହେଉଛି ଏକ ରଜିଷ୍ଟର୍ଡ ଏନବିଏଫସି, ଯାହା ଅତ୍ୟଧିକ ଧନୀ ବ୍ୟକ୍ତିଙ୍କ ଏବଂ ପାରିବାରିକ କାର୍ଯ୍ୟାଳୟଦ୍ୱାରା ସ୍ଥାପିତ ଏବଂ ସମର୍ଥିତ | ଏହି ଏନବିଏଫସି ଗ୍ରାହକଙ୍କୁ ସହଜ ସୁନା ଋଣ ପ୍ରଦାନ ଏବଂ ଏକ ଅଫଲାଇନ ସୋର୍ସିଂ ମଡେଲ ମାଧ୍ୟମରେ ଏକ ବ୍ୟକ୍ତିଗତ ସମ୍ପର୍କ ବିନ୍ଦୁ ବିକଶିତ କରିବା ଉପରେ ଧ୍ୟାନ ଦେଇଥାଏ |",
+  "aboutParagraph2": "ଆମେ ସମାଜର ସମସ୍ତ ବର୍ଗର ପାଇଁ ଶୀର୍ଷ ଏବଂ ବିଶ୍ୱସ୍ତ ଫାଇନାନ୍ସିଂ ଭାଗୀଦାର ହେବାକୁ ଲକ୍ଷ୍ୟ ରଖିଛୁ | ଆମେ ବିଶ୍ୱାସ କରୁଛୁ ଯେ ଏକ ନିରାପଦ ଋଣ ପ୍ରକ୍ରିୟା, କାର୍ଯ୍ୟକାରୀ ଦକ୍ଷତା, ଏବଂ ଗ୍ରାହକ ଆନନ୍ଦ ମାଧ୍ୟମରେ ଆମେ ଅତି ଅଳ୍ପ ସମୟରେ ଆମର ଲକ୍ଷ୍ୟ ହାସଲ କରିପାରିବୁ |",
+  "aboutParagraph3": "ସମୃଦ୍ଧ ଅନୁଭବ ସମ୍ପନ୍ନ ବୃତ୍ତିଗତଙ୍କୁ ସୁନା ଫାଇନାନ୍ସିଂରେ ନେତୃତ୍ୱକାରୀ ଭୂମିକାରେ ଆଗକୁ ବଢ଼ିବାରେ ସାହାଯ୍ୟ କରିବା ପାଇଁ ଆମର ବ୍ୟବସାୟର ଦାୟିତ୍ୱ ଦିଆଯାଇଛି | ଆମର ସଂଗଠନ ଏହି ଆଧାରରେ ଗଠିତ ଯେ କର୍ମଚାରୀଙ୍କୁ ସେମାନେ କି ଭୂମିକା ଗ୍ରହଣ କରନ୍ତୁ ନା କାହିଁକି, ସେମାନଙ୍କୁ ନେତୃତ୍ୱର ସୁଯୋଗ ଦିଆଯିବା ଉଚିତ୍ |",
+  "loanAmount": "ଋଣ ପରିମାଣ",
+  "happyCustomers": "ସନ୍ତୁଷ୍ଟ ଗ୍ରାହକ",
+  "branchNetwork": "ଶାଖା ନେଟୱାର୍କ"
+,
   "features": {
     "title": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ କାହିଁକି ବାଛିବେ?",
     "quickProcessing": {
