--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -121,8 +121,8 @@
         "1": "भुवनेश्वर (फ्लैगशिप शाखा)",
         "2": "कटक सिटी सेंटर",
         "3": "पुरी तीर्थ केंद्र",
-        "4": "संबलपुर वाणिज्यिक केंद्र",
-        "5": "राउरकेला औद्योगिक शाखा"
+        "4": "बालासोर वाणिज्यिक केंद्र",
+        "5": "तालचेर औद्योगिक शाखा"
       }
     },
     "aum": {
@@ -132,7 +132,7 @@
     }
   },
   "title": "हमारी सोने की ऋण सेवाओं के बारे में",
-  "overview": "2010 से एक विश्वसनीय सोना ऋण प्रदाता के रूप में, हम पूरी पारदर्शिता के साथ सबसे प्रतिस्पर्धी ब्याज दरें प्रदान करते हैं। हमारा मिशन आपकी कीमती सोने को सुरक्षित रखते हुए वित्तीय स्वतंत्रता प्रदान करना है।",
+  "overview": "1995 में स्थापित, हमारी कंपनी ने 2023 में गोल्ड लोन फाइनेंस के व्यवसाय में कदम रखा। तब से, हम 24 शाखाओं और 250+ करोड़ रुपये के एसेट्स अंडर मैनेजमेंट (AUM) के साथ ओडिशा के सबसे तेजी से बढ़ने वाले गोल्ड लोन प्रदाता बन गए हैं। ग्राहक-प्रथम दृष्टिकोण और पारदर्शी प्रक्रियाओं ने 15,000 से अधिक परिवारों को उनकी सोने की संपत्ति के वास्तविक मूल्य को उजागर करने के लिए सशक्त बनाया है।",
   
   "journey": {
     "title": "हमारी सोने की यात्रा",
