--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -122,8 +122,8 @@
         "1": "ଭୁବନେଶ୍ୱର (ଫ୍ଲାଗସିପ୍ ଶାଖା)",
         "2": "କଟକ ସିଟି ସେଣ୍ଟର",
         "3": "ପୁରୀ ତୀର୍ଥ କେନ୍ଦ୍ର",
-        "4": "ସମ୍ବଲପୁର ବାଣିଜ୍ୟିକ ହବ୍",
-        "5": "ରାଉରକେଲା ଔଦ୍ୟୋଗିକ ଶାଖା"
+        "4": "ବାଲେଶ୍ୱର ବାଣିଜ୍ୟିକ କେନ୍ଦ୍ର",
+        "5": "ତାଳଚେର ଶିଳ୍ପ ଶାଖା"
       }
     },
     "aum": {
@@ -133,7 +133,7 @@
     }
   },
   "title": "ଆମର ସୁନା ଋଣ ସେବା ବିଷୟରେ",
-  "overview": "2010 ରୁ ଏକ ବିଶ୍ୱସନୀୟ ସୁନା ଋଣ ପ୍ରଦାତା ଭାବରେ, ଆମେ ସମ୍ପୂର୍ଣ୍ଣ ସ୍ୱଚ୍ଛତା ସହିତ ସବୁଠାରୁ ପ୍ରତିଯୋଗିତାମୂଳକ ସୁଧ ହାର ପ୍ରଦାନ କରୁ। ଆମର ଲକ୍ଷ୍ୟ ହେଉଛି ଆପଣଙ୍କ ମୂଲ୍ୟବାନ ସୁନାକୁ ସୁରକ୍ଷିତ ରଖିବା ସହିତ ଆର୍ଥିକ ସ୍ୱାଧୀନତା ପ୍ରଦାନ କରିବା।",
+  "overview": "୧୯୯୫ ମସିହାରେ ସ୍ଥାପିତ, ଆମ କମ୍ପାନୀ ୨୦୨୩ ମସିହାରେ ସୁବର୍ଣ୍ଣ ଋଣ ବ୍ୟବସାୟରେ ପ୍ରବେଶ କରିଥିଲା। ତା'ପରଠାରୁ, ଆମେ ଓଡ଼ିଶାର ଦ୍ରୁତତମ ବୃଦ୍ଧି ପାଉଥିବା ସୁବର୍ଣ୍ଣ ଋଣ ପ୍ରଦାତା ହୋଇଛେ, ଯାହାର ୨୪ଟି ଶାଖା ଏବଂ ୨୫୦ କୋଟିରୁ ଅଧିକ ଟଙ୍କାର AUM (ଆସେଟସ୍ ଅଣ୍ଡର୍ ମ୍ୟାନେଜମେଣ୍ଟ) ରହିଛି। ଗ୍ରାହକ-କେନ୍ଦ୍ରିତ ଦୃଷ୍ଟିକୋଣ ଏବଂ ସ୍ୱଚ୍ଛ ପ୍ରକ୍ରିୟା ମାଧ୍ୟମରେ ଆମେ ୧୫,୦୦୦ରୁ ଅଧିକ ପରିବାରକୁ ସେମାନଙ୍କର ସୁନାର ପରିସମ୍ପତ୍ତିର ପ୍ରକୃତ ମୂଲ୍ୟ ଉଦ୍ଘାଟନ କରିବାରେ ସଶକ୍ତ କରିଛେ।",
   
   "journey": {
     "title": "ଆମର ସୁନା ଯାତ୍ରା",
